# lab1

./: README.md  pyproject.toml  requirements.txt
src/: constants.py  main.py  parser.py  tokenizer.py
tests/: test_calculator.py  test_tokenizer.py
