[project]
name = "lab1"
version = "0.1.0"
description = "Calculator M1"
requires-python = ">=3.12"
dependencies = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
]

[tool.mypy]
python_version = "3.12"
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = "pytest"
ignore_missing_imports = true
